--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,10 @@ h2 {
     background-color: rgba(74, 106, 124, 0.95);
 }
 
+.info-icon {
+    z-index: 9;
+}
+
 h3 {
     font-family: 'PT Sans Narrow';
     font-weight: normal;
@@ -104,7 +108,7 @@ a {
 .story-content {
     position: relative;
     left: calc((100% - 1050px)/2);
-    margin-left: 0px;
+    margin-left: -20px;
     margin-top: 30px;
     max-width: 230px;
     margin-right: 20px;
@@ -263,7 +267,7 @@ td {
     /* (table stories + padding) x number - 1xpadding - 450px */
     height: 74730px;
     left: calc((100% - 1050px)/2);
-    margin-left: 0px;
+    margin-left: -20px;
     width: 180px;
 }
 
